ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: echo1.utako-ingress.networking.family
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.utako-ingress.networking.family
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
